force-app/main/default/objects/Project__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <formula>Contact__r.Billing_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the contact is the billing contact for the membership, this field will be checked off.</inlineHelpText>
    <label>Billing Contact</label>
    <type>Checkbox</type>
</CustomField>