force-app/main/default/objects/Project__c/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <formula>Contact__r.Business_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the contact is the business contact for the membership, this field will be checked.</inlineHelpText>
    <label>Business Contact</label>
    <type>Checkbox</type>
</CustomField>