force-app/main/default/objects/Project__c/fields/Contacts_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Account_ID__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts Account ID</label>
    <type>Text</type>
</CustomField>