force-app/main/default/objects/Project__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <inlineHelpText>Use this field to describe the project.</inlineHelpText>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>