force-app/main/default/objects/Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <inlineHelpText>What is the name of the project?  This is not the project number, but a descriptive name.</inlineHelpText>
    <label>Project Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>