force-app/main/default/objects/Project__c/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <formula>Contact__r.Technical_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the contact is the technical contact for the membership, this field will be checked off.</inlineHelpText>
    <label>Technical Contact</label>
    <type>Checkbox</type>
</CustomField>