force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Project_End_Date__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>